service-tunisia-2004.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunisia-2004-service
spec:
  selector:
    app: tunisia-2004
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30009
  type: NodePort # ClusterIP, LoadBalancer, NodePort
