service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunisia-service
spec:
  selector:
    app: tunisia
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30008
  type: NodePort # ClusterIP, LoadBalancer, NodePort
