ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tunisia-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: { { .Values.ingress.host } }
      http:
        paths:
          - path: /2004(.*)
            pathType: ImplementationSpecific # Prefix, Exact
            backend:
              service:
                name: tunisia-2004-service
                port:
                  number: 80
          - path: /1998(.*)
            pathType: ImplementationSpecific # Prefix, Exact
            backend:
              service:
                name: tunisia-service
                port:
                  number: 80
